update exercises controllers & swag
- update createExercise ctrl
- add updateExercise ctrl
- update swagger vs exercises
